--- a/po/wesnoth-dm/sk.po
+++ b/po/wesnoth-dm/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2012-01-06 08:52+0100\n"
+"PO-Revision-Date: 2012-01-07 08:48+0100\n"
 "Last-Translator: Roman Beňo <romanbeno273@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -1001,6 +1001,10 @@ msgid ""
 "and north across them to the Ford of Abez. The western road around the other "
 "edge of the Brown Hills would have been safer, but..."
 msgstr ""
+"Toto sú Illuvenské močiare - menšia obdoba Močiarov Hrôzy na severnej strane "
+"Veľkej Rieky, ale aj tak dosť nebezpečné. K nášmu cieľ sa dostaneme cestou "
+"vedúcou na severovýchod. K tomu ostrovčeku by sa dalo dostať aj cestou cez "
+"Hnedé vrchy, čo sa mi zdá bezpečnejšie, ale..."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:123
@@ -1008,11 +1012,15 @@ msgid ""
 "... I insisted on the most direct possible route. I know; let us both hope "
 "the choice was not folly. Who made those villages in the swamps? Orcs?"
 msgstr ""
+"Ja som trval na najkratšej ceste. Ja viem, dúfam, že táto voľba nebola "
+"hlúpa. Kto postavil tieto dediny v močiaroch? Orkovia?"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:127
 msgid "No, men of Wesnoth... but those who dwell here are a lawless lot."
 msgstr ""
+"Nie, muži z Wesnothu.. ale tí, ktorí v nich bývajú, nie sú o moc "
+"priateľskejší ako orkovia.."
 
 #. [message]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:138
@@ -1020,57 +1028,61 @@ msgid ""
 "Greetings, strangers! This swamp is dangerous... You wanna cross it, you’ll "
 "need protection — cost you only $fee gold!"
 msgstr ""
+"Zdarím vás, pútnici! Tento močiar je nebezpečný.. Ak cez neho chcete prejsť, "
+"budete potrebovať ochranku - pre vás to bude len  $  gold!"
 
 #. [option]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:140
 msgid "Thanks very much. Here’s the gold..."
-msgstr ""
+msgstr "Ďakujem pekne. Tu je zlato..."
 
 #. [message]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:153
 msgid "It’s been a pleasure doing business with you... Bye!"
-msgstr ""
+msgstr "Bolo výhodné urobiť s vami obchod... Dovi!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:170
 msgid "Where did he go?"
-msgstr ""
+msgstr "Kam išiel?"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:174
 msgid "Haw haw haw! Fools!"
-msgstr ""
+msgstr "Ha ha ha! Blázni!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:178
 msgid "Well, at least we only have to deal with one of them now..."
-msgstr ""
+msgstr "Dobre, aspoň budeme musieť bojovať len s jedným."
 
 #. [option]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:188
 msgid "No thanks — we’ll manage by ourselves..."
-msgstr ""
+msgstr "Nie, ďakujem - ochránime sa sami..."
 
 #. [message]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:192
 msgid "You’ll regret it!"
-msgstr ""
+msgstr "Za toto zaplatíte!"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:196
 msgid "They certainly will! Haw haw haw!"
-msgstr ""
+msgstr "To teda hej! Ha ha ha!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:217
 msgid ""
 "This chest contains all the money that rogue has taken from unwary travelers!"
 msgstr ""
+"V tejto truhlici sú všetky peniaze, čo tento lupič získal od nepozorných "
+"pocestných!"
 
 #. [scenario]: id=07_Night_in_the_Swamp
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:3
 msgid "Night in the Swamp"
-msgstr ""
+msgstr "Noc v močiari"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:85
@@ -1078,16 +1090,18 @@ msgid ""
 "I think that’s all of them! Let’s move on — the less time we spend in this "
 "swamp the better."
 msgstr ""
+"Myslím, že to bolo všetko! Pohnime sa - čím menej budeme v tomto močiari, "
+"tým lepšie."
 
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:100
 msgid "Survive until daybreak."
-msgstr ""
+msgstr "Preži do rána."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:128
 msgid "These swamps seem to go on forever!"
-msgstr ""
+msgstr "Tieto močiari sa zdajú nekonečné!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:132
@@ -1095,11 +1109,13 @@ msgid ""
 "One more day’s travel, I think. We should camp for the night now — we should "
 "be out of it by tomorrow evening."
 msgstr ""
+"Myslím, že cez ne pôjdeme už len jeden deň. Mali by sme sa tu utáboriť na "
+"noc - zajtra večer by sme už mohli byť vonku."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:140
 msgid "Those standing stones — they summon evil creatures!"
-msgstr ""
+msgstr "Tieto stojaté kamene - privolávajú zlé príšery!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:144
@@ -1108,6 +1124,9 @@ msgid ""
 "affected by swords, but they fear the light of day. We must hold them off as "
 "best we can."
 msgstr ""
+"Niečo podobné som už videl na severe. Tieto ... hnusoby ... sú voči mečom "
+"prakticky odolné, ale boja sa denného svetla. Musíme ich od seba držať tak "
+"ďaleko, ako sa len bude dať."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:148
@@ -1115,21 +1134,22 @@ msgid ""
 "Hmmm... if I could get nearer to the stones, I could perhaps break their "
 "power..."
 msgstr ""
+"Hmm... ak by som sa dostal k tým kameňom, možno by som vedel zlomiť ich moc.."
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:163
 msgid "This’ll splinter your bones, you vile monstrosity!"
-msgstr ""
+msgstr "Toto roztrieska tvoje kosti, ty neposlušné monštrum!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:176
 msgid "At least, morning is here... And the skeletons are disappearing!"
-msgstr ""
+msgstr "Konečne.. ráno je tu... A kostlivci zmizli!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:187
 msgid "At last, morning is here!"
-msgstr ""
+msgstr "Konečne, ráno je tu!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:193
@@ -1137,6 +1157,9 @@ msgid ""
 "I hope I never see another night like that! Let’s leave this evil place as "
 "quickly as possible — I want to get us out of Illuven before dusk."
 msgstr ""
+"Dúfam, že už nikdy nezažijem podobnú noc! Musíme odísť z tohoto zlého miesta "
+"tak rýchlo, ako sa len bude dať - chcel by som byť z Illuvenu vonku skôr, "
+"ako padne súmrak."
 
 #. [side]: type=Ancient Wose, id=Ur-Thorodor
 #. [scenario]: id=08_Ur-Thorodor
@@ -1148,7 +1171,7 @@ msgstr "Ur-Thorodor"
 #. [side]: type=Orcish Warrior, id=Tan-Garthak
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:68
 msgid "Tan-Garthak"
-msgstr ""
+msgstr "Tan-Garthak"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:89
@@ -1156,6 +1179,8 @@ msgid ""
 "We have arrived. And there is the island Leollyn spoke of. But what are "
 "those strange shapes moving among the trees?"
 msgstr ""
+"Toto je ten ostrov, o ktorom Leollyn hovoril. Ale... čo sú zač tie tiene, čo "
+"sa hýbu v okolí stromov?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:93
@@ -1164,6 +1189,10 @@ msgid ""
 "thought they were gone from Wesnoth forever. They are not evil, it is said, "
 "but yet they may be hostile to us. We had best be careful."
 msgstr ""
+"Domnievam sa, že sú to Lesní muži, strážcovia stromov. Počul som o nich, ale "
+"myslel som si, že z Wesnothu navždy odišli. Hovorí sa, že nie sú zlí, ale.. "
+"možno sa nás zľaknú a budú nás považovať za svojich nepriateľov. Musíme byť "
+"opatrní."
 
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:97
@@ -1171,6 +1200,8 @@ msgid ""
 "I am Ur-Thorodor, eldest of the forest. Who are you human-creatures? You may "
 "not trespass on our island."
 msgstr ""
+"Ja som Ur-Thorodor, najstarší z tohto lesa. Kto ste vy ľudské-príšery? Na "
+"náš ostrov nesmiete vstúpiť."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:101
@@ -1178,6 +1209,8 @@ msgid ""
 "Ur-Thorodor, please let us pass! We are on a vital mission for King Garard, "
 "in the interests of all living things in Wesnoth."
 msgstr ""
+"Ur-Thorodor, prosím nechaj nás prejsť na tvoj ostrov! Sme na špeciálnej "
+"misii kráľa Gararda, ktorá je v záujme všetkého živého vo Wesnothe."
 
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:105
@@ -1186,6 +1219,10 @@ msgid ""
 "kind have been here, and only now are our roots destroying the last of your "
 "accursed stonework. Now I will speak no more. Leave us, or suffer our wrath!"
 msgstr ""
+"Nestaráme sa o vašich kráľov, ľudia. Už sú to storočia, čo žil váš druh na "
+"tomto ostrove. A iba teraz sa nám podarilo zničiť posledné z tých vašich "
+"kamenných budov, čo ste si tu nastavali. Viac už nebudem hovoriť. Nechajte "
+"nás na pokoji alebo zakúste náš hnev!"
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:109
@@ -1193,6 +1230,8 @@ msgid ""
 "This Ur-Thorodor should not speak of King Garard that way! <i>“Suffer our "
 "wrath”</i> indeed... I’ll show him wrath!"
 msgstr ""
+"Tento Ur-Thorodor odporuje vôli Kráľa Gararda! <i>“Okúsite náš hnev”</i> . "
+"Ja im ukážem hnev!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:113
@@ -1201,11 +1240,13 @@ msgid ""
 "we can get close to Ur-Thorodor, and speak with him again, he will "
 "understand."
 msgstr ""
+"Vyzerá to, že nemáme na výber - musíme ísť na ten ostrov. Dúfam, že ak "
+"obkľúčime Ur-Thorodora a znova sa s ním porozprávame, porozumie nám."
 
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:118
 msgid "Move Delfador to Ur-Thorodor’s castle"
-msgstr ""
+msgstr "Dostaň Delfadora do Ur-Thorodorovho hradu"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:130
@@ -1215,7 +1256,7 @@ msgstr "Zomrie Ur-Thorodor"
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:157
 msgid "Hruuuarrgh! The vile human-creatures hew at me..."
-msgstr ""
+msgstr "Arghhhh..! Tie hľúpe ľudské monštrá ma obkľúčili..."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:161
@@ -1224,11 +1265,14 @@ msgid ""
 "things in Wesnoth — we must fight against it together, or all life here will "
 "perish."
 msgstr ""
+"Ur-Thorodor, musíš nás počúvať! Nejaká veľká zlá sila napadá všetko živé vo "
+"Wesnothe - musíme proti nej bojovať všetci spolu, inak budeme všetci "
+"stratení."
 
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:165
 msgid "I trust no humans! Drive them out, my children!"
-msgstr ""
+msgstr "O to sa nestarám ľudia! Zničte ich, deti moje!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:176
@@ -1236,6 +1280,8 @@ msgid ""
 "I am defeated... My children: hear my last words! Destroy the humans, and "
 "never let them set foot on our island again!"
 msgstr ""
+"Som porazený.. Deti moje, počúvajte moje posledné slová! Zničte tých ľudí a "
+"nikdy im nedovoľte vstúpiť na náš ostrov."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:180
@@ -1243,6 +1289,8 @@ msgid ""
 "This is hopeless! If carrying out my mission means killing these noble "
 "creatures, then I cannot continue."
 msgstr ""
+"Toto je beznádejné! Ak kvôli mojej misii mám zabiť všetky tieto nahlúple "
+"stromy a ich kamarátov, tak nemôžem pokračovať ďalej."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:197
@@ -1252,11 +1300,16 @@ msgid ""
 "no Wesnothian will set foot on your island without your permission again. As "
 "a token of good faith, I command my army to return to the mainland."
 msgstr ""
+"Ur-Thorodor, počúvaj ma! Nie sme tu preto, aby sme zabrali tvoj ostrov! Ak "
+"mi tu ešte chvíľu dovolíš ostať,  potom ti odprisahám v mene Gararda, že "
+"žiadny ďalší človek z Wesnothu nepoloží svoju nohu na tento ostrov bez "
+"tvojho súhlasu. A ako pejav dobrej vôle, prikážem svojim mužom, aby sa "
+"vrátili na pevninu."
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:201
 msgid "Are you sure that’s wise?"
-msgstr ""
+msgstr "Si si istý, že je to správne?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:205
@@ -1265,6 +1318,9 @@ msgid ""
 "rejoin you when I have carried out my mission, and determined what is amiss "
 "in the world of the dead."
 msgstr ""
+"To je jediná možnosť! Lionel, zaveď našich vojakov naspäť na pevninu. "
+"Pripojím sa k tebe, keď splním svoju misiu a vybavím, čo mám vybaviť v ríši "
+"mŕtvych."
 
 #. [message]: speaker=Ur-Thorodor
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:212
@@ -1272,9 +1328,12 @@ msgid ""
 "I see I had misjudged you, human. You are not like those who came before. I "
 "accept your offer!"
 msgstr ""
+"Vidím, že som sa v tebe zmýlil, človek. Nie si ako tí, čo prišli pred tebou. "
+"Prijímam tvoju ponuku!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:219
+#, fuzzy
 msgid ""
 "As the Wesnothians withdrew from the island, the woses melted away into the "
 "trees. Delfador began the meditation that would place him in contact with "
@@ -1284,66 +1343,74 @@ msgid ""
 "timeless dreams of earth and trees, something else stirred on the island — "
 "for a few orcish scouts had indeed crossed the Ford of Abez..."
 msgstr ""
+"Ako sa Wesnothskí vojaci vrátili na pevninu, lesní muži ustúpili do tieňov "
+"stromov. Delfador začal meditovať na istom mieste, kde sa mohol spojiť so "
+"svetom mŕtvich.\n"
+"\n"
+".As the Wesnothians withdrew from the island, the woses melted away into the "
+"trees. Delfador began the meditation that would place him in contact with "
+"the spirit world.\n"
+"\n"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:229
 msgid "Ommmmmmm..."
-msgstr ""
+msgstr "Hmmmmmm....."
 
 #. [message]: speaker=Pruark
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:273
 msgid "A human mage... is it dead?"
-msgstr ""
+msgstr "Ľudský mág... je mŕtvy?"
 
 #. [message]: speaker=Gurbash
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:278
 msgid "Easy to find out... thump it and see if it wakes up!"
-msgstr ""
+msgstr "To ľahko zistíme... ovaľ ho niečím a uvidíme, či sa zobudí!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:282
 msgid "<i>Thump</i>!"
-msgstr ""
+msgstr "<i>Buch!</i>!"
 
 #. [message]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:59
 msgid "Do you serve Iliah-Malal, living man?"
-msgstr ""
+msgstr "Slúžiš Iliah Malalovi, živý muž?"
 
 #. [option]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:61
 msgid "Yes, I serve him."
-msgstr ""
+msgstr "Áno, som jeho služobníkom."
 
 #. [message]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:65
 msgid "Then you will not mind if we kill you! Hahahahah!"
-msgstr ""
+msgstr "Potom ti nebude vadiť, že ťa zabijeme! Chachacha!"
 
 #. [option]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:70
 msgid "No, I do not."
-msgstr ""
+msgstr "Nie, neslúžim."
 
 #. [message]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:74
 msgid "Then you will die forever!"
-msgstr ""
+msgstr "Tak potom zomrieš navždy!"
 
 #. [message]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:106
 msgid "Iliah-Malal commands your death!"
-msgstr ""
+msgstr "Iliah-Malal nariadil, aby si zomrel!"
 
 #. [message]: speaker=Arakar
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:133
 msgid "Destroy the intruder, my minions!"
-msgstr ""
+msgstr "Zničte votrelca, moji verní!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:150
 msgid "Something does not feel right about those villages..."
-msgstr ""
+msgstr "Tieto dediny sa mi nejak nepozdávajú..."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:184
@@ -1351,16 +1418,18 @@ msgid ""
 "I must find that artifact of which the ghost spoke; it sounds too powerful a "
 "thing to be left in Iliah-Malal’s hands."
 msgstr ""
+"Musím nájsť artefakt, o ktorom hovoril ten duch: znie to ako príliš mocná "
+"vec na to, aby bola v rukách Iliah-Malala."
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:192
 msgid "Houses of the Dead"
-msgstr ""
+msgstr "Domy Mŕtvych"
 
 #. [unit]: id=Rorthin, type=Ghost
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:265
 msgid "Rorthin"
-msgstr ""
+msgstr "Rorthin"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:275
@@ -1372,6 +1441,10 @@ msgid ""
 "abuse one of the hated human mages, was to strike Delfador with his "
 "gauntleted fist."
 msgstr ""
+"Bol to jeden z momentov, ktoré zvyknú ovplyvňovať svet. Orkský bojovník mal "
+"mnoho možností. Mohol Delfadorovi odseknúť hlavu. Ak by toto urobil, orkovia "
+"mohli naveky ovládnuť Wesnoth. Ale kedže to bol niektorí z tých nenávidených "
+"ľudských mágov, rozhodol sa mu jednu poriadnu vraziť z jeho päsťou."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:278
