--- a/po/wesnoth-sotbe/lt.po
+++ b/po/wesnoth-sotbe/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-12-15 22:31+0300\n"
+"PO-Revision-Date: 2010-01-01 00:00+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -2286,7 +2286,7 @@ msgstr ""
 #. [message]: speaker=Plonk
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:218
 msgid "It won’t be that easy! Our enemies are well entrenched."
-msgstr "Nebsu taip lengva! Mūsų priešai gerai įsitvirtinę."
+msgstr "Nebus taip lengva! Mūsų priešai gerai įsitvirtinę."
 
 #. [message]: speaker=Plonk
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:222
@@ -3643,7 +3643,7 @@ msgstr "Atvykome, mano valdove."
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:546
 msgid "Ahhh, perfect, more reinforcements."
-msgstr "Aaa, puiku, daugiau pastiprinimų."
+msgstr "Aaa, puiku, dar vienas pastiprinimas."
 
 #. [unit]: type=General, id=Howgarth III
 #. [side]: type=General, id=Howgarth III
