updated French translation

--- a/po/wesnoth-help/fr.po
+++ b/po/wesnoth-help/fr.po
@@ -7,14 +7,14 @@
 # French Wesnoth translation team <wesnoth@ml.free.fr>, 2004.
 # Guillaume Melquiond <guillaume.melquiond@gmail.com>, 2009.
 # Guillaume Melquiond <guillaume.melquiond@gmail.com>, 2009.
-# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
+# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-07 \n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-08 20:40+0200\n"
+"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -935,7 +935,7 @@ msgstr ""
 "          ◦ Collines Dulatus : Ces collines vallonnées au bord de la Grande "
 "Plaine Centrale contribuent largement au bétail et à l'agriculture de "
 "Wesnoth\n"
-"          ◦ Collines Brunes : Terres arides autour de la Montagne aux "
+"          ◦ Collines Ocres : Terres arides autour de la Montagne aux "
 "Griffons, peu peuplées et parfois très dangereuses.\n"
 "          ◦ Plaines aux Chevaux : Région de plaines herbeuses juste au sud "
 "du Grand Fleuve, entourée de la Forêt de Glyn à l'ouest et du fleuve Weldyn "
@@ -949,7 +949,7 @@ msgstr ""
 "hérité du nom d'un fils de Haldric II.\n"
 "          ◦ Bois Gris : Vaste forêt au cœur des terres sauvages de Wesnoth, "
 "située entre Carcyn et Aldril et réputée pour être hantée\n"
-"          ◦ Marais Vert : Vaste marais au cœur des terres sauvages de "
+"          ◦ Marais Glauque : Vaste marais au cœur des terres sauvages de "
 "Wesnoth, au sud d'Aldril. Il recueille les boues des Collines Brunes et "
 "alimente le Grand Fleuve. (Absent de la carte principale)"
 
@@ -1110,7 +1110,7 @@ msgid ""
 msgstr ""
 "Les Bois Elfes sont distincts de ceux du Nord, et n'ont que de sporadiques "
 "relations avec eux et la plupart des autres pays. Ses frontières sont le "
-"Marais Vert au nord-est, le désert (absent de la carte) au sud et "
+"Marais Glauque au nord-est, le désert (absent de la carte) au sud et "
 "l'<ref>dst='great_ocean' text='Océan'</ref> à l'ouest.\n"
 "\n"
 "    • Cités remarquables\n"
@@ -2934,17 +2934,20 @@ msgstr ""
 
 #. [topic]: id=traits_aged
 #: data/core/help.cfg:476
+#, fuzzy
+#| msgid "trait^Undead"
 msgid "trait^Aged"
 msgstr "Âgé"
 
 #. [topic]: id=traits_aged
 #: data/core/help.cfg:477
+#, fuzzy
 msgid ""
 "Units with trait <italic>text='aged'</italic> get a −8 increment in "
 "hitpoints and a −1 increment in movement and melee damage."
 msgstr ""
-"Les unitées <italic>text='âgée'</italic> ont 8 points de vie en moins et 1 "
-"point de mouvement et de dégats de mélée en moins."
+"Les unités <italic>text='âgées'</italic> ont 8 points de vie en moins et 1 "
+"point de mouvement et de dégâts de mêlée en moins."
 
 #. [topic]: id=..terrains
 #: data/core/help.cfg:485
