--- a/po/wesnoth-nr/fr.po
+++ b/po/wesnoth-nr/fr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2012-01-06 17:03+0100\n"
-"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"PO-Revision-Date: 2012-01-09 11:49+0100\n"
+"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
 "Language-Team: Traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "RN"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:15
 msgid "(Normal)"
-msgstr "(Normal)"
+msgstr "(normal)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:15
@@ -37,7 +37,7 @@ msgstr "Paysan"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:16
 msgid "(Challenging)"
-msgstr "(Difficile)"
+msgstr "(difficile)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:16
@@ -47,7 +47,7 @@ msgstr "Porte-lance"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:17
 msgid "(Difficult)"
-msgstr "(Très difficile)"
+msgstr "(très difficile)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:17
@@ -67,7 +67,7 @@ msgstr "Garde royal"
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
 msgid "(Expert level, 13 scenarios.)"
-msgstr "(Niveau expert : 13 scénarios.)"
+msgstr "(Niveau expert : 13 scénarios)."
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
@@ -937,7 +937,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:292
 msgid "... Uh ok!"
-msgstr "... bon d'accord !"
+msgstr ".... bon d'accord !"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:296
@@ -977,7 +977,7 @@ msgstr " chuchoter^c'est pas un peu dangereux d'emmener ce dingue ?"
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:328
 msgid "<i>Burn, you disgusting filth!</i>"
-msgstr "<i>Brûle en enfer, sale pourriture !</i>"
+msgstr "<i>Brûle en enfer, sale pourriture !"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:332
@@ -9739,7 +9739,7 @@ msgstr "T'en es sûr ?"
 #. [message]: id=Rakshas
 #: data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg:725
 msgid "<i>What</i>?!"
-msgstr "<i>Quoi</i>) ?!"
+msgstr "<i>Quoi</i> ?!"
 
 #. [message]: id=Hamel
 #: data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg:729
