--- a/po/wesnoth-sotbe/fr.po
+++ b/po/wesnoth-sotbe/fr.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-05 19:58+0100\n"
-"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-09 02:19+0100\n"
+"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -68,7 +68,7 @@ msgstr "Seigneur de guerre"
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
 msgid "(Expert level, 18 scenarios.)"
-msgstr "(Niveau Expert, 18 scénarios.)"
+msgstr "(Niveau Expert, 18 scénarios)"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
@@ -721,7 +721,6 @@ msgstr ""
 
 #. [message]: role=Helper
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg:154
-#, fuzzy
 msgid "(<i>Snicker</i>)"
 msgstr "(<i>Ricanement</i>)"
 
@@ -1515,7 +1514,7 @@ msgstr "Excellent ! Enfin de l'exercice !"
 #. [message]: speaker=Vraurk
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/05_To_the_Harbor_of_Tirigaz.cfg:318
 msgid "Uh... I don’t think so. Let’s get out of here!"
-msgstr "Heu... je ne crois pas. Partons d'ici !"
+msgstr "Heu ... je ne crois pas. Partons d'ici !"
 
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/05_To_the_Harbor_of_Tirigaz.cfg:323
@@ -1566,7 +1565,7 @@ msgstr "Il est écrit E A U  B É N I T E."
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/05_To_the_Harbor_of_Tirigaz.cfg:365
 msgid "I’m thirsty... <i>Gulp gulp</i>"
-msgstr "J'ai si soif... <i>glou glou</i>"
+msgstr "J'ai si soif... <i> glou glou</i>"
 
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/05_To_the_Harbor_of_Tirigaz.cfg:370
@@ -2027,7 +2026,6 @@ msgstr ""
 
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/07_The_Desert_of_Death.cfg:300
-#, fuzzy
 msgid "(<i>Puke</i>)"
 msgstr "(<i>Beurg</i>)"
 
@@ -2567,7 +2565,7 @@ msgstr "Sauver Inarix"
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:34
 #, fuzzy
 msgid "Wait for Inarix’s arrival from the south on turn 4"
-msgstr "Attendez l'arrivée d'Inarix depuis le sud sur le tour 4"
+msgstr "Attendre l'arrivée d'Inarix depuis le sud au tour 4"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:44
@@ -2797,7 +2795,7 @@ msgstr "Attends un instant."
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:572
 #, fuzzy
 msgid "<i>Phew!</i>"
-msgstr "<i>Pff !</i>"
+msgstr "<i>Pfiou !</i>"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:627
@@ -2871,8 +2869,7 @@ msgid ""
 "Enemies control any villages on the north side of the river when turns run "
 "out"
 msgstr ""
-"Les ennemis contrôle des villages sur la rive nord de la rivière à la fin "
-"des tours"
+"Contrôle d'un village par un ennemi du côté nord du fleuve à la fin des tours"
 
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:223
@@ -2905,11 +2902,11 @@ msgid ""
 "the river where the bridge previously stood so he must have a better plan "
 "than that."
 msgstr ""
-"Je ne suis pas sûr. Chaque forteresse a sa propre faiblesse. les murs de "
-"Prestim sont solides, mais long et il est difficile de les défendre de "
-"plusieurs front à la fois. Cette Lanbec'h Earl doivent savoir qu'il ne peut "
-"traverser que par le gué de la rivière où le pont se tenait auparavant donc "
-"il doit avoir un meilleur plan que ça."
+"Je n'en suis pas si sûr. Chaque forteresse a son point faible. Les murs de "
+"Prestim sont solides mais étendus, il est difficile de les défendre de "
+"plusieurs côtés à la fois. Ce comte Lanbec'h sait certainement qu'il ne "
+"pourra pas entrer en traversant simplement le fleuve là où se trouvait le "
+"pont, il doit donc avoir un meilleur plan en tête."
 
 #. [message]: role=cannonfodder
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:260
@@ -2938,9 +2935,9 @@ msgid ""
 "when the shamans arrive with the Great Horde. We can’t let the humans "
 "establish a foothold on this side of the river."
 msgstr ""
-"Fou ! Nous pouvons tenir aussi longtemps. Mais nous devons avoir Prestim "
-"bien en main lorsque les chamans arriveront avec la Grande Horde. Nous ne "
-"pouvons pas laisser les humains prendre pied sur ce côté de la rivière."
+"Sottises ! Nous pouvons tenir aussi longtemps. Mais nous devons avoir "
+"Prestim bien en main lorsque les chamans arriveront avec la Grande Horde. "
+"Nous ne pouvons pas laisser les humains prendre pied sur ce côté du fleuve."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:285
@@ -2951,10 +2948,10 @@ msgid ""
 "leadership of the horde for themselves and the humans will be able to break "
 "through our defenses."
 msgstr ""
-"Parce que si nous ne pouvons pas résolument battre ces êtres humains, les "
-"autres tribus seront que nous ne sommes pas assez forts pour les repousser. "
-"Chaque chef va essayer de réclamer le leadership de la horde, pour eux et "
-"les humains seront capables de percer nos défenses."
+"Parce que si nous n'arrivons pas à vaincre ces humains de manière "
+"incontestable, les autres tribus penseront que nous ne sommes pas assez "
+"forts pour les diriger. Les chefs se battront tous pour prendre la tête de "
+"la horde et les humains pourront en profiter pour abattre nos défenses."
 
 #. [message]: role=cannonfodder
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:290
@@ -2968,13 +2965,11 @@ msgstr "Et la bataille pour Prestim commença."
 
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:377
-#, fuzzy
 msgid "Look, the humans are boarding a ship!"
 msgstr "Regardez, les humains sont à bord d'un navire !"
 
 #. [message]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:886
-#, fuzzy
 msgid "Charge!"
 msgstr "Chargez !"
 
@@ -3005,12 +3000,11 @@ msgstr "Ahh, foutre ! Ils ont des hommes-poissons avec eux."
 msgid ""
 "The Great Horde is almost here! Drive them out of our villages <b>now</b>!"
 msgstr ""
-"La Grande Horde est presque là ! Expulsez-les de nos villages <b> maintenant "
-"</ b>!"
+"La Grande Horde est presque arrivée ! Expulsez-les de nos villages "
+"<b>maintenant</ b> !"
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1130
-#, fuzzy
 msgid "Here we are!"
 msgstr "Nous voici !"
 
@@ -3021,8 +3015,8 @@ msgid ""
 "What’s this? This weakling has let humans enter Prestim? I will lead the "
 "horde and push them to the river!"
 msgstr ""
-"Qu'est-ce ? Ce gringalet a laissé les humains entrer à Prestim ? Je vais "
-"mener la Horde et les repousser à la rivière !"
+"Que se passe-t-il ? Ce gringalet a laissé des humains entrer dans Prestim ? "
+"Je vais mener la Horde et les repousser vers le fleuve !"
 
 #. [message]: role=greathordewarlord2
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1141
@@ -3031,8 +3025,8 @@ msgid ""
 "Bah! I’m the only one strong enough to drive out the humans! The Great Horde "
 "follows me!"
 msgstr ""
-"Bah ! Je suis le seul assez fort pour chasser les humains ! Que la Grande "
-"Horde me suive !"
+"Bah ! Je suis le seul à être assez fort pour chasser les humains ! Que la "
+"Grande Horde me suive !"
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1147
@@ -3041,8 +3035,8 @@ msgid ""
 "Look at that, the stupid orcs are starting to fight amongst themselves! "
 "Now’s our chance, everyone attack!"
 msgstr ""
-"Regarde ça, ces stupides orcs commencent à se battre entre eux ! C'est "
-"maintenant notre chance, attaquer tout le monde !"
+"Voyez donc comment ces stupides orcs commencent à se battre entre eux ! "
+"C'est là notre chance, tout le monde à l'attaque !"
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1158
@@ -3741,7 +3735,7 @@ msgstr "Vous feriez mieux d'aller voir."
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:682
 #, fuzzy
 msgid "I obey."
-msgstr "J'obéis."
+msgstr "À vos ordres."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:689
@@ -4007,8 +4001,8 @@ msgid ""
 "I can’t leave these renegades unguarded at our rear. I must take care of "
 "them before continuing."
 msgstr ""
-"Je ne peux pas laisser ces renégats sans surveillance sur notre arrière. Je "
-"dois prendre soin d'eux avant de continuer."
+"Je ne peux pas laisser ces renégats sans surveillance sur nos arrières. Je "
+"dois m'occuper d'eux avant de continuer."
 
 #. [scenario]: id=16_The_Coward
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:4
@@ -4649,7 +4643,6 @@ msgstr ""
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/18_Northern_Alliance.cfg:669
-#, fuzzy
 msgid "Blood and steel! The traitor was mine!"
 msgstr "Sang et acier ! Le traître m'appartenait !"
 
@@ -4658,7 +4651,8 @@ msgstr "Sang et acier ! Le traître m'appartenait !"
 #, fuzzy
 msgid "I’m sorry, Kapou’e. I’ll have my men leave what remains of him to you."
 msgstr ""
-"Je suis désolé, Kapou'e. Mes hommes nous quittent ce qui demeure sont à vous."
+"Je suis désolé, Kapou'e. Je demanderai à mes hommes de vous laisser ses "
+"restes."
 
 #. [message]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/18_Northern_Alliance.cfg:681
